--- a/css/custom.css
+++ b/css/custom.css
@@ -1,6 +1,6 @@
 body {
   font-family: "Roboto", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  background-color: #FCFCFC;
+  background-color: #e6dbb9;
   -webkit-font-smoothing: antialiased;
   font-size: 1.8em;
   line-height: 1.5;
@@ -55,11 +55,11 @@ footer {
 }
 
 main {
-  margin: 4rem 0;
+  margin: 0rem 0;
 }
 
 .container {
-  width: 90%;
+  width: 100%;
   /* max-width: 700px; */
 }
 
@@ -193,4 +193,53 @@ blockquote cite {
     text-align: right;
     color: #888888;
     font-size: 0.9em;
+}
+
+table{
+    margin: 50px auto;
+    border-spacing: 0;
+    background: transparent;
+}
+table th{
+    width: 100px;
+    height: 30px;
+    line-height: 30px;
+    background: transparent;
+    color: white;
+}
+table td{
+    width: 100px;
+    height: 30px;
+    text-align:left;
+    line-height: 30px;
+}
+table tr th:first-child, table tr td:first-child{
+    border-left: 10px solid transparent;    /* 给table设置左边框 */
+}
+table tr th:last-child, table tr td:last-child{
+    border-right: 10px solid transparent;    /* 给table设置右边框 */
+}
+/*table tr td:first-child, table tr !*td:nth-child(2), table tr td:nth-child(3) *! {*/
+/*    border-bottom: 10px solid transparent;    !* 给tbody各列设置下边框 *!*/
+/*}*/
+table tr:first-child th:first-child{
+    border-top-left-radius: 5px;     /* 设置table左上圆角 */
+}
+table tr:first-child{
+    border-top-right-radius: 5px;     /* 设置table右上圆角 */
+}
+table tr:last-child td:first-child{
+    border-bottom-left-radius: 5px; /* 设置table左下圆角 */
+}
+table tr:last-child td:last-child{
+    border-bottom-right-radius: 5px;/* 设置table右下圆角 */
+}
+table {
+    background-color: transparent;
+}
+table>:not(caption)>*>* {
+    background-color: transparent;
+}
+.table_row{
+    background-color: transparent;
 }
